test/syc/bad/signedsigned.c
/*
 * Two signed specifiers
 */

signed signed a;
